Fixed overflow problem with body

--- a/style.scss
+++ b/style.scss
@@ -7,11 +7,12 @@
 body {
     margin: 0;
     min-height: 100vh;
-    width: 100vw;
+    max-width: 100vw;
     background: url(./images/bgsquare.jfif) no-repeat center fixed;
     background-size: cover;
     display: flex;
     flex-direction: column;
+    box-sizing: border-box;
     
         main {
             display: flex;
@@ -23,7 +24,7 @@ body {
                 background-color:  rgb(58, 49, 139, 0.7);
                 border-radius: 8px;
                 margin: 4em auto;
-                width: 70vw;
+                width: 65vw;
                 padding: 30px;
                 box-shadow: 0 0 2em rgb(69, 69, 69);
                 display: flex;
@@ -84,8 +85,10 @@ body {
         
         main {
 
+            max-width: 100vw;
+
             .about-text-box {
-                margin: 20vh auto 20vh auto;
+                margin: 10vh auto;
                 width: 80vw;
                 padding: 2em;
                 background-color:  rgb(58, 49, 139, 0.7);
